Fixed rotation of NavigationItem not centered and Mapped NavigationItem key warning.

--- a/src/coponents-stateLess/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
+++ b/src/coponents-stateLess/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
@@ -2,8 +2,10 @@
 
 .NavigationItem {
     box-sizing: border-box;
-    display: block;
+    display: inline-block;
     width: 100%;
+    //backface-visibility: hidden;
+    transform-origin: center center 0;
 
     &Enter {
         transform: rotateY(0deg);
@@ -32,13 +34,14 @@
     }
 
     & a {
+        margin-left: 7px;
+        margin-right: 7px;
         border-radius: 15%;
-        margin-right: 15px;
         background-color: $color-secondary-light;
         color: $color-primary;
         text-decoration: none;
         width: 100%;
-        box-sizing: border-box;
+        //box-sizing: border-box;
         display: block;
     }
 
